--- a/src/_data/navigation.yaml
+++ b/src/_data/navigation.yaml
@@ -3,7 +3,7 @@ items:
   - text: Home
     url: "/"
   - text: About
-    url: "#"
+    url: "/about"
   - text: Contact
     url: "#"
   # - text: Blog
