--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -23,13 +23,14 @@ collections:
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Author", name: "author", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
+      - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - { label: "Body", name: "body", widget: "markdown" }
       - widget: select
         label: "tags"
         name: "tags"
         multiple: true
         create: true
-        options: ["Tags", "created", "from", "config.yml"]
+        options: ["html", "css", "javascript", "git", "react"
   - label: "Settings"
     name: "settings"
     editor:
