--- a/src/_data/navigation.yaml
+++ b/src/_data/navigation.yaml
@@ -1,7 +1,7 @@
 items:
   - text: Home
     url: /
-  # - text: About
-  #   url: /about
-  # - text: Contact
-  #   url: "#"
+  - text: About
+    url: /about
+  - text: Contact
+    url: /contact
